--- a/fbsr_templates/bokin/index.html
+++ b/fbsr_templates/bokin/index.html
@@ -2,10 +2,10 @@
 
 {% block extra_head %}
 
-<link rel="stylesheet" type="text/css" href="/media/admin/css/forms.css"/>
-<link rel="stylesheet" type="text/css" href="/media/admin/css/base.css"/>
-<link rel="stylesheet" type="text/css" href="/media/admin/css/global.css"/>
-<link rel="stylesheet" type="text/css" href="/media/admin/css/widgets.css"/>
+<link rel="stylesheet" type="text/css" href="/admin/media/css/forms.css"/>
+<link rel="stylesheet" type="text/css" href="/admin/media/css/base.css"/>
+<link rel="stylesheet" type="text/css" href="/admin/media/css/global.css"/>
+<link rel="stylesheet" type="text/css" href="/admin/media/css/widgets.css"/>
 
 <script type="text/javascript" src="/admin/jsi18n/"></script>
 <script type="text/javascript" src="/media/js/core.js"></script>
