--- a/fbsr_templates/bokin/index.html
+++ b/fbsr_templates/bokin/index.html
@@ -4,12 +4,12 @@
 
 <link rel="stylesheet" type="text/css" href="/admin/media/css/forms.css"/>
 <link rel="stylesheet" type="text/css" href="/admin/media/css/base.css"/>
-<link rel="stylesheet" type="text/css" href="/admin/media/css/global.css"/>
+<!--link rel="stylesheet" type="text/css" href="/admin/media/css/global.css"/-->
 <link rel="stylesheet" type="text/css" href="/admin/media/css/widgets.css"/>
 
 <script type="text/javascript" src="/admin/jsi18n/"></script>
-<script type="text/javascript" src="/media/js/core.js"></script>
-<script type="text/javascript" src="/media/js/admin/RelatedObjectLookups.js"></script>
+<script type="text/javascript" src="/admin/media/js/core.js"></script>
+<script type="text/javascript" src="/admin/media/js/admin/RelatedObjectLookups.js"></script>
 
 {{ eventform.media }}
 
