--- a/fbsr_templates/bokin/index.html
+++ b/fbsr_templates/bokin/index.html
@@ -4,16 +4,18 @@
 
 <link rel="stylesheet" type="text/css" href="/admin/media/css/forms.css"/>
 <link rel="stylesheet" type="text/css" href="/admin/media/css/base.css"/>
-<!--link rel="stylesheet" type="text/css" href="/admin/media/css/global.css"/-->
 <link rel="stylesheet" type="text/css" href="/admin/media/css/widgets.css"/>
 
-<script type="text/javascript" src="/admin/jsi18n/"></script>
+<script type="text/javascript" src="/myadmin/jsi18n/"></script>
 <script type="text/javascript" src="/admin/media/js/core.js"></script>
 <script type="text/javascript" src="/admin/media/js/admin/RelatedObjectLookups.js"></script>
 
 {{ eventform.media }}
 
 {% endblock %}
+
+<link rel="stylesheet" type="text/css" href="/media/styles/fbsr.css" />
+<link rel="icon" type="image/png" href="/media/favicon.png" />
 
 <script type="text/javascript">
 // <![CDATA[
@@ -55,65 +57,7 @@ function disableon(obj,div,selectedvalue) {
 </script>
 
 
-<style type="text/css">
-<!--
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6 {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-}
 
-body {
-	background-color: #2b3a3c;
-	color: #2d2e2e;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: .8em;
-	line-height: 1.2em;
-	margin: 0 0 0 0; 
-	padding: 0 0 0 0; 
-	text-align: center; 
-}
-
-img {
-border:0;
-margin:0 10px;
-}
-
-img.reduced50 {
-width:40px;
-height:40px;
-}
-#error {
-	color: #aa0000;
-}
-
-#outerWrapper {
-	background-color: #fff;
-	margin: 0 auto 0 auto; 
-	text-align: left; 
-	width: 70em;
-	-moz-border-radius: 15px; -webkit-border-radius: 15px;
-}
-#outerWrapper #header {
-	background-color: #8ab573;
-	-moz-border-radius-topleft: 15px; -webkit-border-top-left-radius: 15px;
-	-moz-border-radius-topright: 15px; -webkit-border-top-right-radius: 15px;
-	border-bottom: solid 1px #628152; 
-	font-size: 1.5em;
-	font-weight: bold;
-	line-height: 1.7em;
-	padding: 10px 10px 10px 10px; 
-}
-
-#outerWrapper #contentWrapper #content {
-	margin: 0 16em 0 16em; 
-	padding: 10px 10px 10px 10px;
-	
-}
--->
-</style> 
 </HEAD><BODY>
 <DIV id="outerWrapper">
   <DIV id="header"> <b>Bókin</b></DIV>
@@ -147,7 +91,7 @@ height:40px;
   
       <td><input type="submit" name="bsubmit" value="Stimpla inn" /></td>
     <td><input type="submit" name="bsubmit" value="Loka atburði" id="cancel_event"/></td>
-    <td><a href="/bokin/notandi/skra/">Skrá nilla</a></td>
+    <td><a href="/bokin/notandi/skra/">Skrá nýjan nilla</a></td>
   </tr>  </table><br/>
 </form>
 
