nýliða mynd yfir í media

--- a/fbsr_templates/bokin/index.html
+++ b/fbsr_templates/bokin/index.html
@@ -113,7 +113,7 @@ function disableon(obj,div,selectedvalue) {
 	{% if item.imageurl %}
 	  <td><img src="{{item.imageurl}}" class="reduced50"/></td>
 	{% else %}
-	    <td><img src="./site_media/nilli.jpg" class="reduced50"/></td>
+	    <td><img src="./media/nilli.jpg" class="reduced50"/></td>
 	{% endif %}
 
       	
