Uppfærsla á nilla notendum yfir í fbsr.is notendur loks tilbúinn. Lagaði villu í stofnun nilla fái userid sem ekki skarasta við fbsr.is userid. Bætt við drögum að félagalista og atburðalista. Henti inn nýju template á stofnun nilla.

--- a/fbsr_templates/bokin/index.html
+++ b/fbsr_templates/bokin/index.html
@@ -1,5 +1,5 @@
 <HTML><HEAD>
-
+<meta http-equiv="refresh" content="300"/>
 {% block extra_head %}
 
 <link rel="stylesheet" type="text/css" href="/admin/media/css/forms.css"/>
@@ -124,6 +124,8 @@ function disableon(obj,div,selectedvalue) {
 						<div class="inside-column">
 
 							<ul class="menu">
+								<li><a href="bokin/atburdir">Síðustu atburðir</a></li>
+								<li><a href="bokin/notendur">Notendur</a></li>
 								<li><a href="">Tölfræði</a></li>
 								<li><a href="">Lager</a></li>
 							</ul>
@@ -169,7 +171,7 @@ function disableon(obj,div,selectedvalue) {
 			<div id="footer">
 
 				<p>
-					&copy FBSR 2009
+					&copy FBSR 2009  (útgáfa 0.0.2)
 				</p>
 			</div>
 		</div>
