Lagaði skjölun til að benda á github, setti inn slóðir á github wiki

--- a/fbsr_templates/bokin/index.html
+++ b/fbsr_templates/bokin/index.html
@@ -128,6 +128,8 @@ function disableon(obj,div,selectedvalue) {
 								<li><a href="bokin/notendur">Notendur</a></li>
 								<li><a href="">Tölfræði</a></li>
 								<li><a href="">Lager</a></li>
+								<li><a href="http://wiki.github.com/axeltomasson/fbsr-bokin/">Hjálp</a></li>
+								<li><a href="http://github.com/axeltomasson/fbsr-bokin/issues">Skrá villu</a></li>
 							</ul>
 							<p class="block">
 							
@@ -190,7 +192,7 @@ function disableon(obj,div,selectedvalue) {
 			<div id="footer">
 
 				<p>
-					&copy FBSR 2009  (útgáfa 0.0.2)
+					FBSR 2009  (útgáfa 0.0.2)
 				</p>
 			</div>
 		</div>
